Started adding 3D lighting system

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,8 +12,8 @@ EXE = KingEngine
 
 all: $(EXE)
 
-$(EXE): main.o ksComplex.o ksComplexBehavior.o ksApplication.o ksParticleEmitter.o ksWorld.o ksPathFinder.o ksEffect.o ksControlLayer.o ksButton.o ksEntityLayer.o ksEntity.o ksVector2D.o
-	$(CXX) $(LDFLAGS) main.o ksComplex.o ksComplexBehavior.o ksApplication.o ksParticleEmitter.o ksWorld.o ksPathFinder.o ksEffect.o ksControlLayer.o ksButton.o ksEntityLayer.o ksEntity.o ksVector2D.o -o $@
+$(EXE): main.o ksComplex.o ksComplexBehavior.o ksApplication.o ksParticleEmitter.o ksLightSystem.o ksWorld.o ksPathFinder.o ksEffect.o ksControlLayer.o ksButton.o ksEntityLayer.o ksEntity.o ksVector2D.o
+	$(CXX) $(LDFLAGS) main.o ksComplex.o ksComplexBehavior.o ksApplication.o ksParticleEmitter.o ksLightSystem.o ksWorld.o ksPathFinder.o ksEffect.o ksControlLayer.o ksButton.o ksEntityLayer.o ksEntity.o ksVector2D.o -o $@
 
 main.o: main.cpp
 	$(CXX) $(CXXFLAGS) main.cpp -o $@
@@ -29,6 +29,9 @@ ksApplication.o: ksApplication.cpp
 
 ksParticleEmitter.o: ksParticleEmitter.cpp
 	$(CXX) $(CXXFLAGS) ksParticleEmitter.cpp -o $@
+
+ksLightSystem.o: ksLightSystem.cpp
+	$(CXX) $(CXXFLAGS) ksLightSystem.cpp -o $@
 
 ksWorld.o: ksWorld.cpp
 	$(CXX) $(CXXFLAGS) ksWorld.cpp -o $@
